quiz play fix for different number of options per question, images not stretching inside containers

--- a/style.css
+++ b/style.css
@@ -106,13 +106,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    cursor: pointer;
 }
 
 .quizz img {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    object-fit: cover;
 }
 
 .quizz {
@@ -121,6 +121,7 @@ body {
     height: 181px;
     margin-bottom: 12px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .quizz .quizz-title {
@@ -203,7 +204,17 @@ body {
     line-height: 27px;
 }
 
-.answer-container {
+.answer-container-2 {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 24.3px;
+    row-gap: 18.6px;
+    padding: 20px 36.4px 35px;
+}
+
+.answer-container-3-4 {
     height: 100%;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -223,6 +234,7 @@ body {
 .answer img {
     width: 100%;
     height: 175px;
+    object-fit: cover;
 }
 
 .answer p {
